--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Drive Lanka</title>
+    <title>Lanka Travels Rides</title>
   </head>
   <body>
     <div id="root"></div>
